--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ importlib-metadata==6.7.0
 Markdown==3.4.4
 mysqlclient==2.1.1
 oauthlib==3.2.2
+Pillow==9.5.0
 pycparser==2.21
 PyJWT==2.8.0
 python3-openid==3.2.0
